math-core/tests/snapshots/wiki_test__wiki101.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\intercal \\barwedge \\veebar \\doublebarwedge \\between \\pitchfork"
---
<math>
    <mo>⊺</mo>
    <mo lspace="0">⊼</mo>
    <mo lspace="0">⊻</mo>
    <mo lspace="0">⩞</mo>
    <mo lspace="0">≬</mo>
    <mo lspace="0">⋔</mo>
</math>
