math-core/tests/snapshots/wiki_test__wiki104.snap
---
source: math-core/tests/wiki_test.rs
expression: "a^2, a^{x+3}"
---
<math>
    <msup>
        <mi>a</mi>
        <mn>2</mn>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>a</mi>
        <mrow>
            <mi>x</mi>
            <mo>+</mo>
            <mn>3</mn>
        </mrow>
    </msup>
</math>
