math-core/tests/snapshots/wiki_test__wiki108.snap
---
source: math-core/tests/wiki_test.rs
expression: "10^{10^{8}}"
---
<math>
    <msup>
        <mn>10</mn>
        <msup>
            <mn>10</mn>
            <mn>8</mn>
        </msup>
    </msup>
</math>
