math-core/tests/snapshots/wiki_test__wiki111.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\dot{x}, \\ddot{x}"
---
<math>
    <mover>
        <mi>x</mi>
        <mo accent="true">˙</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>x</mi>
        <mo accent="true">¨</mo>
    </mover>
</math>
